# llmtoolkit

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  pyproject.toml
.github/workflows/: ci-linters.yaml  ci-main.yaml
examples/conversation/: conversation.py  history.py
examples/llms/: mistralai_llm.py  ollama.py  ollama_llm.py
src/llmtoolkit/: __init__.py  exc.py  exceptions.py
src/llmtoolkit/asr/: __init__.py  base_whisper.py  local_whisper.py  openai_whisper.py
src/llmtoolkit/chain/: __init__.py  base.py
src/llmtoolkit/chain/function_calling/: __init__.py  native.py  ollama.py
src/llmtoolkit/chain/prompts/: __init__.py  prompt.py  system_prompt.py  user_message_prompt.py  user_message_prompt_cover.py
src/llmtoolkit/conversation/: __init__.py  base.py  conversation.py  history.py
src/llmtoolkit/core/: __init__.py  asr.py  chain.py  conversation.py  enums.py  llm.py  models.py
src/llmtoolkit/core/models/: __init__.py  asr.py  base.py  history.py
src/llmtoolkit/llm/: __init__.py  base.py  mistralai.py  ollama.py  openai.py
src/llmtoolkit/llms/: __init__.py  base.py  mistral.py  ollama.py
src/llmtoolkit/llms/ollama/: __init__.py  llm.py
src/llmtoolkit/tools/: __init__.py  base.py  config.py
src/llmtoolkit/tools/image/: base.py
src/llmtoolkit/tools/internet/: __init__.py  base.py  duckduckgo_search.py  google_search.py  website_text_extractor.py
