[tool.poetry]
name = "llmtoolkit"
version = "0.0.3"
description = "LLM-Toolkit offers essential tools for efficiently working with large language models. It simplifies integration and optimization, making LLM-based application development smoother."
authors = ["Mykyta Ishchenko <mykita.ishchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
httpx = "^0.27.0"
ollama = "^0.3.1"
mistralai = "^1.1.0"

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[tool.ruff]
line-length = 100
show-fixes = true
lint.exclude = [".git", "__pycache__"]
lint.extend-select = ["E", "F", "UP", "I"]
target-version = "py310"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-httpserver = "^1.0.8"
