[tool.poetry]
name = "llmtoolkit"
version = "0.0.6"
description = "LLM-Toolkit offers essential tools for efficiently working with large language models. It simplifies integration and optimization, making LLM-based application development smoother."
authors = ["Mykyta Ishchenko <mykita.ishchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
openai = "^1.53.0"
bs4 = "^0.0.2"
pillow = "^11.0.0"
transformers = "^4.46.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
diffusers = "^0.32.0"
accelerate = "^1.1.0"
mistralai = "^1.2.1"
numpy = "^2.1.3"
setuptools-rust = "^1.10.2"
python-multipart = "^0.0.20"

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[tool.ruff]
line-length = 100
show-fixes = true
lint.exclude = [".git", "__pycache__"]
lint.extend-select = ["E", "F", "UP", "I"]
target-version = "py310"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-httpserver = "^1.0.8"
